bug on placeholder forms on IE

--- a/components/form/scss/_form_main.scss
+++ b/components/form/scss/_form_main.scss
@@ -328,6 +328,6 @@
 	color: map-get($object-forms-vars, field-placeholder-color);
 }
 
-:-ms-input-placeholder {
-	color: map-get($object-forms-vars, field-placeholder-color);
+input:-ms-input-placeholder {
+	color: map-get($object-forms-vars, field-placeholder-color) !important;
 }
